--- a/front/app/layout/header/header.component.html
+++ b/front/app/layout/header/header.component.html
@@ -8,14 +8,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
+      <a class="navbar-brand" ng-click="$ctrl.goToMoviesListPage()">Movies Plus App</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link 1</a></li>
-        <li><a href="#">Link 2</a></li>
+        <li ng-repeat="page in $ctrl.pages" ng-class="{ 'active': page.code === $ctrl.activePageCode }" class="clickable">
+          <a ng-click="page.onClick()">{{page.name}}</a>
+        </li>
       </ul>
     </div>
   </div>
