--- a/front/app/styles/sass/components/_modules.scss
+++ b/front/app/styles/sass/components/_modules.scss
@@ -1,1 +1,2 @@
-@import '../../../layout/home/home.component';
+@import '../../../core/home/home.component';
+@import '../../../core/movies/movies.component';
