movies app_ creacion de pantallas y routing

--- a/front/app/core/home/home.component.html
+++ b/front/app/core/home/home.component.html
@@ -1,4 +1,6 @@
 <div class="wrapper">
   <header></header>
-  <div class="main-content" ui-view></div>
+  <div class="main-content">
+    <ui-view></ui-view>
+  </div>
 </div>
