--- a/front/app/layout/header/header.component.html
+++ b/front/app/layout/header/header.component.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" ng-click="$ctrl.goToMoviesListPage()">Movies Plus App</a>
+      <a class="navbar-brand clickable" ng-click="$ctrl.goToMoviesListPage()">Movies Plus App</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
