--- a/front/app/core/movies/movies.component.html
+++ b/front/app/core/movies/movies.component.html
@@ -1,4 +1,4 @@
-<div ng-if="$ctrl.isInitialized">
+<div ng-show="$ctrl.isInitialized">
   <div class="page-header">
     <div class="title">Listado de películas</div>
     <div class="actions">
