--- a/front/app/layout/upload-file/upload-file.component.scss
+++ b/front/app/layout/upload-file/upload-file.component.scss
@@ -1,4 +1,4 @@
-.image-upload-btn {
+.file-upload-btn {
   width: 100px;
   height: 100px;
   border: 1px solid #CCC;
@@ -17,7 +17,7 @@
   }
 }
 
-.image-upload-btn:hover {
+.file-upload-btn:hover {
   background-color: #CCC;
 }
 
