--- a/front/app/core/movies/movie-update.component.html
+++ b/front/app/core/movies/movie-update.component.html
@@ -1,10 +1,10 @@
 <div ng-if="$ctrl.isInitialized">
   <div class="page-header">
-    <div class="title">Nueva película</div>
+    <div class="title">{{$ctrl.movie.name}}</div>
   </div>
   <div class="row">
     <div class="col-md-6 col-sm-12 col-xs-12">
-      <form name="$ctrl.movieCreationForm">
+      <form name="$ctrl.movieUpdateForm">
         <div class="field">
           <label for="code" class="required">Código</label>
           <input type="text" ng-model="$ctrl.movie.code" class="form-control value" id="code" required>
