--- a/front/app/core/movies/movie-update.component.html
+++ b/front/app/core/movies/movie-update.component.html
@@ -1,7 +1,5 @@
 <div ng-if="$ctrl.isInitialized">
-  <div class="page-header">
-    <div class="title">{{$ctrl.movie.name}}</div>
-  </div>
+  <page-header title="$ctrl.movie.name"></page-header>
   <div class="row">
     <div class="col-md-6 col-sm-12 col-xs-12">
       <form name="$ctrl.movieUpdateForm">
