--- a/front/app/styles/sass/components/_modules.scss
+++ b/front/app/styles/sass/components/_modules.scss
@@ -1,4 +1,5 @@
 @import '../../../core/home/home.module';
 @import '../../../core/movies/movies.module';
+@import '../../../core/series/series.module';
 
 @import '../../../layout/upload-file/upload-file.component';
