Ajustes en estilos

--- a/front/app/styles/sass/app.scss
+++ b/front/app/styles/sass/app.scss
@@ -13,6 +13,7 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 
 @import '../../../node_modules/ui-select/dist/select.css';
 @import '../../../node_modules/ng-notify/dist/ng-notify.min.css';
+@import '../../../node_modules/angular-loading-bar/build/loading-bar.css';
 
 @import './utilities/variables';
 @import './utilities/mixins';
